Feature: Standardized action card popup and ability to advance initative following roll execution.

--- a/templates/item/attribute-parts/action-card.hbs
+++ b/templates/item/attribute-parts/action-card.hbs
@@ -19,6 +19,27 @@
           </option>
         </select>
       </div>
+
+      {{!-- Advance Initiative Toggle --}}
+      <div class="eventide-sheet__toggle-group">
+        <label class="erps-toggles erps-toggles--label-left">
+          <input
+            type="checkbox"
+            class="erps-toggles__input"
+            name="system.advanceInitiative"
+            id="system.advanceInitiative"
+            {{checked system.advanceInitiative}}
+          />
+          <div class="erps-toggles__container">
+            <span class="erps-toggles__label" title='{{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.AdvanceInitiative.label"}}'>
+              {{localize "EVENTIDE_RP_SYSTEM.Item.ActionCard.AdvanceInitiative.label"}}
+            </span>
+            <span class="erps-toggles__track">
+              <span class="erps-toggles__thumb"></span>
+            </span>
+          </div>
+        </label>
+      </div>
     </div>
 
 
