Translation File Audit: updated untranslated strings.

--- a/templates/actor/actor-secondary-resources.hbs
+++ b/templates/actor/actor-secondary-resources.hbs
@@ -5,7 +5,7 @@
         <h4 class='erps-stat-box__label'>Dice Pool</h4>
       </header>
       <div class='erps-stat-box__lower' aria-label="Dice Pool Value">
-        <span class="erps-stat-box__value" title="Available Dice (Derived)">
+        <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.AvailableDice'}}">
           {{system.hiddenAbilities.dice.total}}
         </span>
       </div>
@@ -16,11 +16,11 @@
         <h4 class='erps-stat-box__label'>Fail Range</h4>
       </header>
       <div class='erps-stat-box__lower' aria-label="Fail Range Value">
-        <span class="erps-stat-box__value" title="Fail Minimum (Derived)">
+        <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.FailMinimum'}}">
           {{system.hiddenAbilities.fmin.total}}
         </span>
         <span class="erps-stat-box__separator">-</span>
-        <span class="erps-stat-box__value" title="Fail Maximum (Derived)">
+        <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.FailMaximum'}}">
           {{system.hiddenAbilities.fmax.total}}
         </span>
       </div>
@@ -31,11 +31,11 @@
         <h4 class='erps-stat-box__label'>Crit Range</h4>
       </header>
       <div class='erps-stat-box__lower' aria-label="Critical Range Value">
-        <span class="erps-stat-box__value" title="Critical Minimum (Derived)">
+        <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.CriticalMinimum'}}">
           {{system.hiddenAbilities.cmin.total}}
         </span>
         <span class="erps-stat-box__separator">-</span>
-        <span class="erps-stat-box__value" title="Critical Maximum (Derived)">
+        <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.CriticalMaximum'}}">
           {{system.hiddenAbilities.cmax.total}}
         </span>
       </div>
@@ -46,7 +46,7 @@
         <h4 class='erps-stat-box__label'>Stat Total</h4>
       </header>
       <div class='erps-stat-box__lower' aria-label="Total Stat Points Value">
-        <span class="erps-stat-box__value" title="Total Stat Points (Derived)">
+        <span class="erps-stat-box__value" title="{{localize 'EVENTIDE_RP_SYSTEM.UI.TotalStatPoints'}}">
           {{system.statTotal.value}}
         </span>
       </div>
