--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -48,7 +48,7 @@
         data-edit="img"
         data-action='onEditImage'
         data-target="img"
-        title="Effect Image"
+        title="{{localize 'EVENTIDE_RP_SYSTEM.UI.EffectImage'}}"
         name="displayImage"
         id="displayImage"
       />
