Feature: performance dashboard to help catch sneaky memory leak bugs in the future.

--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -18,6 +18,7 @@
 @use 'components/damage-cards';
 @use 'components/gear-creator';
 @use 'components/sound-settings';
+@use 'components/performance-dashboard';
 
 // New components
 @use 'components/sheet/tables';
