--- a/templates/item/character-effects.hbs
+++ b/templates/item/character-effects.hbs
@@ -90,6 +90,7 @@
                     <option value="override" {{#if (eq mode "override")}}selected{{/if}}>Override</option>
                     <option value="advantage" {{#if (eq mode "advantage")}}selected{{/if}}>Advantage</option>
                     <option value="disadvantage" {{#if (eq mode "disadvantage")}}selected{{/if}}>Disadvantage</option>
+                    <option value="AC" {{#if (eq mode "ac.change")}}selected{{/if}}>AC Only</option>
                   {{/if}}
                 </select>
               </td>
