--- a/templates/chat/parts/card-effects.hbs
+++ b/templates/chat/parts/card-effects.hbs
@@ -28,6 +28,8 @@
                     {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
                   {{else if (eq (keySplit this.key 4) "disadvantage")}}
                     {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
+                  {{else if (and (eq (keySplit this.key 3) "ac") (eq (keySplit this.key 4) "change"))}}
+                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.AC"}}
                   {{else if (eq (keySplit this.key 3) "change")}}
                     {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
                   {{else if (eq (keySplit this.key 3) "transform")}}
