--- a/templates/item/description.hbs
+++ b/templates/item/description.hbs
@@ -1,6 +1,6 @@
 {{! Description Tab }}
 <section
-  class='tab {{tab.cssClass}}'
+  class='tab description {{tab.cssClass}}'
   data-group='primary'
   data-tab='description'
 >
